--- a/templates/projects.html
+++ b/templates/projects.html
@@ -19,8 +19,8 @@
     <main> 
         <div class="page-row-section">
             <div class="page-column-section">
-                <a href="/kneeEd">
-                    <div class="selector-content">
+                <a href="{{ url_for('knee_ed') }}">KneeEd</a>
+                <div class="selector-content">
                         <div class="content default-mode">
                             <div class="page-row-section inner-row-section">
                                 <img class="project-img" src="{{ url_for('static', filename='images/kneeEd1.jpeg')}}">
@@ -37,8 +37,8 @@
         <hr class="gradient-hr"> 
         <div class="page-row-section">
             <div class="page-column-section">
-                <a href="/fistbump">
-                    <div class="selector-content">
+                <a href="{{ url_for('fistbump') }}">Fistbump</a>
+                                    <div class="selector-content">
                         <div class="content default-mode">
                             <div class="page-row-section inner-row-section">
                                 <img class="project-img" src="{{ url_for('static', filename='images/fistbumpHome.jpeg')}}">
@@ -55,8 +55,8 @@
         <hr class="gradient-hr"> 
         <div class="page-row-section">
             <div class="page-column-section">
-                <a href="/stockSentiment">
-                    <div class="selector-content">
+                <a href="{{ url_for('stock_sentiment') }}">Stock Sentiment</a>
+                                    <div class="selector-content">
                         <div class="content default-mode">
                             <div class="page-row-section inner-row-section">
                                 <img class="project-img" src="{{ url_for('static', filename='images/positive_data_word_cloud.jpeg')}}">
@@ -73,7 +73,8 @@
         <hr class="gradient-hr">
         <div class="page-row-section">
             <div class="page-column-section">
-                <a href="/andersonCodingClub">
+                <a href="{{ url_for('anderson_coding_club') }}">Coding Club</a>
+                
                     <div class="selector-content">
                         <div class="content default-mode">
                             <div class="page-row-section inner-row-section">
@@ -91,7 +92,7 @@
         <hr class="gradient-hr"> 
         <div class="page-row-section">
             <div class="page-column-section">
-                <a href="/canKiosk">
+                <a href="{{ url_for('can_kiosk') }}">CANKiosk</a>
                     <div class="selector-content">
                         <div class="content default-mode">
                             <div class="page-row-section inner-row-section">
