FInal Vercel Fix for Prjoects

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="/" class="nav-text" id="home-link">Home</a>
+        <a href="/" class="nav-text" id="home-link">Home
         <nav class="nav-bar" style="margin-left: 60%;">
             <a href="{{ url_for('about') }}" class="nav-text" id="about-link">About Me</a>
                 <a href="{{ url_for('projects') }}" class="nav-text" id="projects-link">Projects</a>
@@ -19,7 +19,7 @@
     <main> 
         <div class="page-row-section">
             <div class="page-column-section">
-                <a href="{{ url_for('knee_ed') }}">KneeEd</a>
+                <a href="{{ url_for('knee_ed') }}">KneeEd
                 <div class="selector-content">
                         <div class="content default-mode">
                             <div class="page-row-section inner-row-section">
@@ -37,7 +37,7 @@
         <hr class="gradient-hr"> 
         <div class="page-row-section">
             <div class="page-column-section">
-                <a href="{{ url_for('fistbump') }}">Fistbump</a>
+                <a href="{{ url_for('fistbump') }}">Fistbump
                                     <div class="selector-content">
                         <div class="content default-mode">
                             <div class="page-row-section inner-row-section">
@@ -55,7 +55,7 @@
         <hr class="gradient-hr"> 
         <div class="page-row-section">
             <div class="page-column-section">
-                <a href="{{ url_for('stock_sentiment') }}">Stock Sentiment</a>
+                <a href="{{ url_for('stock_sentiment') }}">Stock Sentiment
                                     <div class="selector-content">
                         <div class="content default-mode">
                             <div class="page-row-section inner-row-section">
@@ -73,8 +73,7 @@
         <hr class="gradient-hr">
         <div class="page-row-section">
             <div class="page-column-section">
-                <a href="{{ url_for('anderson_coding_club') }}">Coding Club</a>
-                
+                <a href="{{ url_for('anderson_coding_club') }}">Coding Club
                     <div class="selector-content">
                         <div class="content default-mode">
                             <div class="page-row-section inner-row-section">
@@ -92,7 +91,7 @@
         <hr class="gradient-hr"> 
         <div class="page-row-section">
             <div class="page-column-section">
-                <a href="{{ url_for('can_kiosk') }}">CANKiosk</a>
+                <a href="{{ url_for('can_kiosk') }}">CANKiosk
                     <div class="selector-content">
                         <div class="content default-mode">
                             <div class="page-row-section inner-row-section">
