Vercel Project Accessibility Kneed fix

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -19,7 +19,7 @@
     <main> 
         <div class="page-row-section">
             <div class="page-column-section">
-                <a href="{{ url_for('knee_ed') }}">KneeEd
+                <a href="{{ url_for('knee_ed') }}">
                 <div class="selector-content">
                         <div class="content default-mode">
                             <div class="page-row-section inner-row-section">
@@ -37,7 +37,7 @@
         <hr class="gradient-hr"> 
         <div class="page-row-section">
             <div class="page-column-section">
-                <a href="{{ url_for('fistbump') }}">Fistbump
+                <a href="{{ url_for('fistbump') }}">
                                     <div class="selector-content">
                         <div class="content default-mode">
                             <div class="page-row-section inner-row-section">
@@ -55,7 +55,7 @@
         <hr class="gradient-hr"> 
         <div class="page-row-section">
             <div class="page-column-section">
-                <a href="{{ url_for('stock_sentiment') }}">Stock Sentiment
+                <a href="{{ url_for('stock_sentiment') }}"> 
                                     <div class="selector-content">
                         <div class="content default-mode">
                             <div class="page-row-section inner-row-section">
@@ -73,7 +73,7 @@
         <hr class="gradient-hr">
         <div class="page-row-section">
             <div class="page-column-section">
-                <a href="{{ url_for('anderson_coding_club') }}">Coding Club
+                <a href="{{ url_for('anderson_coding_club') }}">
                     <div class="selector-content">
                         <div class="content default-mode">
                             <div class="page-row-section inner-row-section">
@@ -91,7 +91,7 @@
         <hr class="gradient-hr"> 
         <div class="page-row-section">
             <div class="page-column-section">
-                <a href="{{ url_for('can_kiosk') }}">CANKiosk
+                <a href="{{ url_for('can_kiosk') }}">
                     <div class="selector-content">
                         <div class="content default-mode">
                             <div class="page-row-section inner-row-section">
